Fixing background color for collapsed navigation bar

--- a/theme/swanlotus/static/sass/swanlotus.sass
+++ b/theme/swanlotus/static/sass/swanlotus.sass
@@ -69,6 +69,10 @@ html
     position: fixed
     top: 0em
     width: 100%
+
+.container > .navbar,
+.container > .navbar .navbar-menu,
+.container > .navbar .navbar-brand
     background-color: $navbar-background-color
     padding: $navbar-padding
 
